--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-paginate="true" data-theme="default" lang="ja-JP" data-marpit-pagination="14" style="--paginate:true;--theme:default;" data-marpit-pagination-total="20">
 <h2 id="%E6%9C%AC%E7%B7%A8-%E6%9C%80%E8%BF%91%E3%83%A9%E3%83%99%E3%83%AB%E3%83%BB%E3%82%A2%E3%82%AF%E3%82%BB%E3%82%B7%E3%83%96%E3%83%AB%E3%83%8D%E3%83%BC%E3%83%A0%E3%81%AB%E6%82%A9%E3%82%93%E3%81%A0%E5%85%A5%E5%8A%9Bui">本編！: 最近ラベル・アクセシブルネームに悩んだ入力UI</h2>
-<p>ここからは、ラベル・アクセシブルネームの付け方に悩んだものを紹介します！<br />
-といきたいのですが、LTの時間に収まらなかったので、あとでスライドをみて自分だったらどんなラベルをつけるか考えてみてください♪<br />
+<p>ここからは、ラベル・アクセシブルネームの付け方に悩んだものを紹介します！</p>
+<p>といきたいのですが、LTの時間に収まらなかったので、あとでスライドをみて自分だったらどんなラベルやアクセシブルネームをつけるか考えてみてください♪<br />
 <a href="#skip">飛ばす</a></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-paginate="true" data-theme="default" lang="ja-JP" data-marpit-pagination="15" style="--paginate:true;--theme:default;" data-marpit-pagination-total="20">
@@ -146,10 +146,12 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-paginate="true" data-theme="default" lang="ja-JP" data-marpit-pagination="17" style="--paginate:true;--theme:default;" data-marpit-pagination-total="20">
-<h2 id="%E6%9C%80%E8%BF%91%E3%82%88%E3%81%8F%E8%A6%8B%E3%82%8B%E3%82%82%E3%81%AE3-%E6%9D%A1%E4%BB%B6%E3%81%AE%E5%85%A5%E5%8A%9B%E6%9D%A1%E4%BB%B6%E6%96%87">最近よく見るもの3: 条件の入力（条件文）</h2>
+<h2 id="%E6%82%A9%E3%82%93%E3%81%A0%E3%82%84%E3%81%A43-%E6%9D%A1%E4%BB%B6%E3%81%AE%E5%85%A5%E5%8A%9B%E6%9D%A1%E4%BB%B6%E6%96%87">悩んだやつ3: 条件の入力（条件文）</h2>
 <img src="./image/splitinput3.png" alt="条件1という項目に3つの入力欄がある。入力はすべてコンボボックスで、2つ目と3つ目の入力の間に「の経験が」というテキストがある" />
 <ul>
-<li>各項目に、あなたならどんなアクセシブルネームをつけますか？</li>
+<li>条件の大分類を選んだあと、小分類の項目と、その有無を選択させるUI</li>
+<li>1つ目と2つ目は<a href="https://smarthr.design/products/components/combo-box/">Combobox | コンポーネント | SmartHR Design System</a>で、3つ目はSelectを使用</li>
+<li>各入力要素に、あなたならどんなアクセシブルネームをつけますか？</li>
 <li>可視のラベル、つけられそうですか？</li>
 </ul>
 </section>
