画像サイズの指定を変更

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-paginate="true" data-theme="default" lang="ja-JP" data-marpit-pagination="17" style="--paginate:true;--theme:default;" data-marpit-pagination-total="20">
 <h2 id="%E6%82%A9%E3%82%93%E3%81%A0%E3%82%84%E3%81%A43-%E6%9D%A1%E4%BB%B6%E3%81%AE%E5%85%A5%E5%8A%9B%E6%9D%A1%E4%BB%B6%E6%96%87">悩んだやつ3: 条件の入力（条件文）</h2>
-<img src="./image/splitinput3.png" alt="条件1という項目に3つの入力欄がある。入力はすべてコンボボックスで、2つ目と3つ目の入力の間に「の経験が」というテキストがある" />
+<img src="./image/splitinput3.png" alt="条件1という項目に3つの入力欄がある。入力はすべてコンボボックスで、2つ目と3つ目の入力の間に「の経験が」というテキストがある" width="48%" />
 <ul>
 <li>条件の大分類を選んだあと、小分類の項目と、その有無を選択させるUI</li>
 <li>1つ目と2つ目は<a href="https://smarthr.design/products/components/combo-box/">Combobox | コンポーネント | SmartHR Design System</a>で、3つ目はSelectを使用</li>
